test/tests/stages/17_supporting_dynamic_memory_allocation/valid/libraries/test_for_memory_leaks_client.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[126]:
  extern
  long
  identifier(sum)
  ;
  void
  identifier(lots_of_args)
  (
  int
  identifier(a)
  ,
  int
  identifier(b)
  ,
  int
  identifier(c)
  ,
  int
  identifier(d)
  ,
  int
  identifier(e)
  ,
  int
  identifier(f)
  ,
  int
  identifier(g)
  ,
  int
  identifier(h)
  ,
  int
  identifier(i)
  ,
  int
  identifier(j)
  ,
  int
  identifier(k)
  ,
  int
  identifier(l)
  ,
  int
  identifier(m)
  ,
  int
  identifier(n)
  ,
  int
  identifier(o)
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  <
  const int(10000000)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  )
  {
  identifier(lots_of_args)
  (
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  ,
  const int(4)
  ,
  const int(5)
  ,
  const int(6)
  ,
  const int(7)
  ,
  const int(8)
  ,
  const int(9)
  ,
  const int(10)
  ,
  const int(11)
  ,
  const int(12)
  ,
  const int(13)
  ,
  const int(14)
  ,
  identifier(i)
  )
  ;
  }
  if
  (
  identifier(sum)
  !=
  const int(49999995000000)
  )
  {
  return
  const int(15)
  ;
  }
  return
  const int(0)
  ;
  }
